# rnnoise

./: CMakeLists.txt  Makefile  config.h  config.status  configure  dump_features  dump_weights_blob  librnnoise.la  libtool  package_version  rnnoise-uninstalled.pc  rnnoise.pc
.libs/: librnnoise.lai  librnnoise.so.0.4.1
autom4te.cache/: output.2  output.3
doc/: Doxyfile
examples/: rnnoise_demo
examples/.deps/: rnnoise_demo.Po
examples/.libs/: rnnoise_demo
src/: celt_lpc.lo  denoise.lo  kiss_fft.lo  nnet.lo  nnet_default.lo  parse_lpcnet_weights.lo  pitch.lo  rnn.lo  rnnoise_data.lo  rnnoise_tables.lo
src/.deps/: celt_lpc.Plo  denoise.Plo  dump_features-celt_lpc.Po  dump_features-denoise.Po  dump_features-dump_features.Po  dump_features-kiss_fft.Po  dump_features-parse_lpcnet_weights.Po  dump_features-pitch.Po  dump_features-rnnoise_tables.Po  dump_weights_blob-write_weights.Po  kiss_fft.Plo  nnet.Plo  nnet_default.Plo  parse_lpcnet_weights.Plo  pitch.Plo  rnn.Plo  rnnoise_data.Plo  rnnoise_tables.Plo
